# biomarker-discovery-pipeline

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/: golden_genes.csv
notebooks/: 01_data_integration.ipynb  02_biomarker_discovery.ipynb  03_validation.ipynb  04_manuscript_prep.ipynb
scripts/: run_biomarker_discovery.py  run_data_integration.py  run_figures.py  run_validation.py
src/: __init__.py  data_integration.py  drug_target_mapping.py  figure_generation.py  ml_classification.py  pathway_analysis.py  survival_analysis.py
