[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biomarker-discovery-pipeline"
version = "1.0.0"
description = "Biomarker discovery & validation pipeline for RelB-driven HGSOC"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Omar Lujano Olazaba", email = "o.lujano13@gmail.com"}]
keywords = ["oncology", "HGSOC", "RelB", "biomarker", "survival-analysis"]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=0.24.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "lifelines>=0.27.0",
    "gseapy>=0.10.8",
    "requests>=2.26.0",
    "tqdm>=4.62.0",
]

[project.urls]
Repository = "https://github.com/TARVIA-lab/biomarker-discovery-pipeline.git"
